applications/prd/surveys-reports/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: surveys-reports-prd
  labels:
    name: surveys-reports-prd
    environment: production
