applications/prd/surveys-reports/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: surveys-reports
  namespace: surveys-reports-prd
  labels:
    app: surveys-reports
spec:
  replicas: 2
  selector:
    matchLabels:
      app: surveys-reports
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "monitoring/nodejs-instrumentation"
      labels:
        app: surveys-reports
    spec:
      imagePullSecrets:
      - name: ghcr-pull-secret
      containers:
      - name: surveys-reports
        image: ghcr.io/wedigitek/reports-surveys:rc
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8050
        volumeMounts:
        - name: keyvault-env
          mountPath: /mnt/secrets-store
          readOnly: true
        resources:
          requests:
            memory: "256Mi"
            cpu: "25m"
          limits:
            memory: "512Mi"
            cpu: "200m"
      volumes:
      - name: keyvault-env
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: surveys-reports-keyvault-env
