applications/prd/surveys-reports/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surveys-reports
  namespace: surveys-reports-prd
spec:
  selector:
    app: surveys-reports
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
