applications/prd/surveys-reports/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: surveys-reports
  namespace: surveys-reports-prd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - surveys.services.trywefood.dev
    secretName: surveys-reports-tls
  rules:
  - host: surveys.services.trywefood.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: surveys-reports
            port:
              number: 80
